[project]
name = "pixidb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-benchmark>=5.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
